frontend/src/style/styles.scss
@import "custom_angular";
@import "_variables";
@import "custom_bootstrap";
@import "fonts/Roboto";
@import "fonts/MaterialIcons";

p {
  margin: 0;
  padding: 0;
}

html,
body {
  font-size: 100%;
  margin: 0;
  padding: 0;
  background-color: $overview-bg;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

.linebreak {
  white-space: pre-wrap;
}

.title {
  font-size: 1.25rem;
  font-weight: bold;
  word-wrap: anywhere;
  color: black;
  @extend .linebreak;
}

.sub-title {
  font-size: 0.8rem;
}

.detail-view-subtitle {
  font-size: 1rem;
}

.keyResult-attribute-show {
  background-color: $keyResult-attribute-bg;
  padding: 0.25em 0.75rem;
  border-radius: 2px;
}

.keyResult-attribute-edit {
  @extend .keyResult-attribute-show;
  border: solid $keyResult-attribute-edit-border 1px;
}

.bg-grey {
  background-color: $overview-bg;
}

body pzsh-backdrop {
  display: none;
}

.text-small {
  font-size: 1rem;
}

@media screen and (max-width: 580px) {
  .text-small {
    font-size: 0.8rem;
  }
}

.dialog {
  max-width: 769px;
  box-shadow:
    0 0 0 0 rgba(0, 0, 0, 0.06),
    1px 1px 2px 0 rgba(0, 0, 0, 0.06),
    3px 3px 4px 0 rgba(0, 0, 0, 0.05),
    8px 6px 6px 0 rgba(0, 0, 0, 0.03),
    14px 11px 7px 0 rgba(0, 0, 0, 0.01),
    21px 18px 8px 0 rgba(0, 0, 0, 0);
}

.disable-scrolling {
  overflow-y: hidden;
}

input textarea {
  outline-color: #909090;
}

.panel {
  max-width: 800px;
  @extend .col-md-12;
}

.backdrop {
  margin-top: $top-bar-height;
}

.spinner-container {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  @extend .mt-5;
  @extend .display-6;
}

.cursor-pointer {
  cursor: pointer;
}

.icon-button {
  background-color: transparent;
  border: none;
  padding: 0;
}

.mat-mdc-form-field-error {
  color: $error-color;
}

textarea,
input:not([type]),
input[type="text"] {
  @extend .ps-1;
}

.big-dialog-form-field {
  height: 4.375rem !important;
  padding: 0.437rem 0.625rem 0.375rem 0.625rem !important;
}

.mat-mdc-checkbox .mdc-form-field {
  font-size: 1rem !important;
}

.dialog-form-field-error {
  resize: none;
  outline: $error-color 2px solid !important;
}

.custom-select {
  border: solid 1px #909090;
  padding: 0.44rem 0.625rem 0.375rem 0.625rem;
  cursor: pointer;
  width: 9.625rem;
  height: 1.18rem;
  box-sizing: content-box;
}

*:focus {
  outline: $pz-dark-blue solid 2px;
}

.bg-inherit {
  background-color: inherit;
}

.border-error {
  border: 1px solid $error;
}

.dialog-padding {
  padding: 0 1.62rem 0 1.62rem !important;
}

.objective-three-dot-menu {
  border-radius: 0.5rem !important;
  .mat-mdc-menu-content {
    padding: 0 !important;
  }
}

.team-title {
  font-size: 1.5rem;
  font-weight: bold;
}

.select-style .mat-mdc-select-value-text {
  margin-left: 0.5rem !important;
}

.dialog-detail-button {
  margin-left: -8px;
}

#objective-form-field .mdc-notched-outline__trailing {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}

mat-form-field.quarter-filter .mat-mdc-text-field-wrapper {
  width: 220px;
}

.input-style {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
}

.scroll-shadows {
  max-height: 80vh;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  overflow-scrolling: touch;

  background:
    /* Shadow Cover TOP */
    linear-gradient(white 30%, rgba(255, 255, 255, 0)) center top,
    /* Shadow Cover BOTTOM */ linear-gradient(rgba(255, 255, 255, 0), white 70%) center bottom,
    /* Shadow TOP */ radial-gradient(farthest-side at 50% 0, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) center top,
    /* Shadow BOTTOM */ radial-gradient(farthest-side at 50% 100%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) center bottom;

  background-repeat: no-repeat;
  background-size:
    100% 40px,
    100% 40px,
    100% 14px,
    100% 14px;
  background-attachment: local, local, scroll, scroll;
}

.scroll-shadows {
  --scrollbarBG: transparent;
  --thumbBG: #90a4ae;

  scrollbar-width: thin;
  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
}
.scroll-shadows::-webkit-scrollbar {
  width: 6px;
}
.scroll-shadows::-webkit-scrollbar-track {
  background: var(--scrollbarBG);
}
.scroll-shadows::-webkit-scrollbar-thumb {
  background-color: var(--thumbBG);
  border-radius: 6px;
  border: 3px solid var(--scrollbarBG);
}

.sub-title-keyresult {
  font-size: 0.9rem !important;
}

* {
  line-height: 115% !important;
}

.add-cross-button {
  margin-bottom: 1px;
}

.add-text {
  margin-top: 1px;
}

.align-new-icon {
  margin-left: -10px;
}

.team-header {
  @include media-breakpoint-down(sm) {
    padding-left: 22px;
  }
}

.h-0 {
  height: 0;
}

.break-word {
  word-break: break-all;
}

